--- a/cosine_similarity.ipynb
+++ b/cosine_similarity.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3DCprU44eXakeOZo+ILwb",
+      "authorship_tag": "ABX9TyOgSy/mWTwdmlAOQf7gYIUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,20 +34,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r_wrUPnDw06W",
-        "outputId": "5ebcf4f7-1e9b-4f4f-b83f-3fc4dae6b826"
+        "outputId": "942db409-c8cf-48e9-b8d9-5eab309a1a45"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'autism-info-llm-comparison'...\n",
-            "remote: Enumerating objects: 45, done.\u001b[K\n",
-            "remote: Counting objects: 100% (45/45), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (44/44), done.\u001b[K\n",
-            "remote: Total 45 (delta 17), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (45/45), 2.90 MiB | 10.45 MiB/s, done.\n",
-            "Resolving deltas: 100% (17/17), done.\n"
+            "fatal: destination path 'autism-info-llm-comparison' already exists and is not an empty directory.\n"
           ]
         }
       ],
@@ -69,7 +63,7 @@
           "height": 380
         },
         "id": "EC1by5e9xLjC",
-        "outputId": "76cf3db5-7929-4e6a-ae7b-1f36a1620911"
+        "outputId": "53e0bdb8-a30f-42e2-8511-f20cc1197e6c"
       },
       "execution_count": 2,
       "outputs": [
@@ -163,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0c881f70-75f5-4638-91ac-e242487c355c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c1d11555-dbc6-4fe1-a08a-5bebb02c308d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -278,7 +272,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c881f70-75f5-4638-91ac-e242487c355c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c1d11555-dbc6-4fe1-a08a-5bebb02c308d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -330,12 +324,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0c881f70-75f5-4638-91ac-e242487c355c button.colab-df-convert');\n",
+              "        document.querySelector('#df-c1d11555-dbc6-4fe1-a08a-5bebb02c308d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0c881f70-75f5-4638-91ac-e242487c355c');\n",
+              "        const element = document.querySelector('#df-c1d11555-dbc6-4fe1-a08a-5bebb02c308d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -355,8 +349,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a9c45d29-a201-489d-b020-51d2eed7e56c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a9c45d29-a201-489d-b020-51d2eed7e56c')\"\n",
+              "<div id=\"df-ed4aaf97-b410-4032-9b33-86c29990c921\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ed4aaf97-b410-4032-9b33-86c29990c921')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -475,7 +469,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a9c45d29-a201-489d-b020-51d2eed7e56c button');\n",
+              "        document.querySelector('#df-ed4aaf97-b410-4032-9b33-86c29990c921 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -511,18 +505,9 @@
       "cell_type": "code",
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.metrics.pairwise import cosine_similarity"
-      ],
-      "metadata": {
-        "id": "Xd7uBrSPxh4E"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "vectorizer = TfidfVectorizer()\n",
+        "\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n",
         "similarities = {}\n",
         "\n",
@@ -546,9 +531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fuvhb4_3xm9b",
-        "outputId": "7577695b-f85b-4ee1-aacd-f6a5244e416b"
+        "outputId": "f7e31c5c-5ea1-4af8-ac72-b3176d5d928f"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,9 +589,9 @@
           "height": 570
         },
         "id": "IFeSNW3-zY0A",
-        "outputId": "dcfceb78-b785-4236-cbfd-ffd4f5b32f94"
+        "outputId": "96861b12-6f59-462a-a33a-4a241e1bd67f"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -631,9 +616,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKXzDQv22c3-",
-        "outputId": "963686ab-6e99-4d16-dabe-5f61af7407ab"
+        "outputId": "149eb824-0546-4445-bcba-b0c0b440d112"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,9 +658,9 @@
           "height": 607
         },
         "id": "xIAeSWmj27M1",
-        "outputId": "40e8d6c8-011b-49a0-b5d8-68174656e89e"
+        "outputId": "cb16551d-8654-45c6-b101-15a7a6cd508b"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -707,9 +692,9 @@
           "height": 607
         },
         "id": "p73iUEnh3Jmz",
-        "outputId": "75e01e08-22d4-4d57-b064-972a51ee948d"
+        "outputId": "8d193db4-c1c0-4f38-e473-445d5186e1d6"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
