--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLwKC8gAY65XBMOtLqfD4b",
+      "authorship_tag": "ABX9TyOV3zM1aJKIXiGygvfmK3hU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,17 +28,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 38,
       "metadata": {
         "id": "MwG_-wyUGDNX"
       },
       "outputs": [],
       "source": [
         "if (!require(syuzhet)) install.packages(\"syuzhet\")\n",
-        "if (!require(readxl)) install.packages(\"readxl\")\n",
         "\n",
-        "library(syuzhet)\n",
-        "library(readxl)"
+        "library(syuzhet)"
       ]
     },
     {
@@ -51,7 +49,7 @@
       "metadata": {
         "id": "9EgDfMgHINXy"
       },
-      "execution_count": 21,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -60,61 +58,34 @@
         "analyze_sentiments <- function(text) {\n",
         "  sentiments <- get_nrc_sentiment(text)\n",
         "  return(sentiments)\n",
-        "}"
+        "}\n",
+        "\n",
+        "results <- lapply(responses, analyze_sentiments)"
       ],
       "metadata": {
         "id": "cBHshY8DIJlO"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "results <- lapply(responses, analyze_sentiments)"
-      ],
-      "metadata": {
-        "id": "gF7rQzSXIHDh"
-      },
-      "execution_count": 23,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "aggregated_sentiments <- lapply(results, colSums)"
-      ],
-      "metadata": {
-        "id": "Oc0Gmq8iIErv"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "aggregated_sentiments <- lapply(results, colSums)\n",
         "df_sentiments <- do.call(rbind, aggregated_sentiments)\n",
-        "df_sentiments <- data.frame(Model = rownames(df_sentiments), df_sentiments, row.names = NULL)"
-      ],
-      "metadata": {
-        "id": "c8N0CY8dICnK"
-      },
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(df_sentiments)"
+        "df_sentiments <- data.frame(Model = rownames(df_sentiments), df_sentiments, row.names = NULL)\n",
+        "print(df_sentiments)\n",
+        "\n",
+        "write.csv(df_sentiments, \"sentiment_analysis_results.csv\", row.names = FALSE)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RNKJEOhTH_Vo",
-        "outputId": "34c8a69e-452f-4dbb-b7fb-c8dabec392a0"
+        "id": "Oc0Gmq8iIErv",
+        "outputId": "9c05546f-7f8e-43d4-cf2e-a25dccd74dae"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,13 +121,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "write.csv(df_sentiments, \"sentiment_analysis_results.csv\", row.names = FALSE)\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "nCV3ZnPcH6ny"
       },
-      "execution_count": 27,
+      "execution_count": 42,
       "outputs": []
     }
   ]
