--- a/count.ipynb
+++ b/count.ipynb
@@ -35,28 +35,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vN2hrfziylyo",
-        "outputId": "053e168a-3b29-4356-c1a4-206a65d402e8"
+        "outputId": "ce279115-6fc8-4609-9663-4b1bb56919ae"
       },
-      "execution_count": 1,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'autism-info-llm-comparison'...\n",
-            "remote: Enumerating objects: 120, done.\u001b[K\n",
-            "remote: Counting objects: 100% (120/120), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (119/119), done.\u001b[K\n",
-            "remote: Total 120 (delta 49), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (120/120), 8.32 MiB | 10.01 MiB/s, done.\n",
-            "Resolving deltas: 100% (49/49), done.\n"
+            "fatal: destination path 'autism-info-llm-comparison' already exists and is not an empty directory.\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 46,
       "metadata": {
         "id": "4eTFNar5-kcr"
       },
@@ -86,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bx6g4TK3--K_",
-        "outputId": "8a9302c9-2f9f-4a11-bc02-ab62551fbcb7"
+        "outputId": "726c2c64-5d7f-470b-913c-fdc7b68ca7b9"
       },
-      "execution_count": 3,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,13 +128,13 @@
       ],
       "metadata": {
         "id": "o71JSJhOQ-N2",
-        "outputId": "7670c90e-1f55-4215-84d6-c528edd24c08",
+        "outputId": "b2689c9b-b8f4-4765-f1b0-af53c6cc378d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 570
         }
       },
-      "execution_count": 4,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-pmy10LfAgL-",
-        "outputId": "e1627511-1501-4633-cae6-f5a71496b544"
+        "outputId": "3b1cf473-60c1-4adb-f5aa-fe8370e8757c"
       },
-      "execution_count": 5,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,13 +198,13 @@
       ],
       "metadata": {
         "id": "aVK4lGkpRH2x",
-        "outputId": "9c024bea-da62-4ed3-ea44-55f312d930a3",
+        "outputId": "114f4d8f-ec7d-47e8-d100-f9daed57b5af",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 560
         }
       },
-      "execution_count": 6,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,13 +232,13 @@
       ],
       "metadata": {
         "id": "Kj7G0FlgRTVo",
-        "outputId": "6ff063d7-e1f8-4e8a-9bf4-2fb67b71d3ea",
+        "outputId": "ebfbf4aa-b7c5-4d99-ffe4-34c129b497e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 560
         }
       },
-      "execution_count": 7,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -261,13 +255,13 @@
     {
       "cell_type": "code",
       "source": [
-        "word_count_df['Soma'] = df.sum(axis=1)\n",
+        "word_count_df.loc['Total'] = word_count_df.sum(numeric_only=True)\n",
         "word_count_df.to_csv('word_count.csv', index=False)"
       ],
       "metadata": {
         "id": "K1aJxFMY2-El"
       },
-      "execution_count": 8,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -288,16 +282,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8hRqpzdA0iUe",
-        "outputId": "d27d7de0-3104-42a8-ba0c-9db7255921da"
+        "outputId": "aa3b9450-63dc-4abf-cd27-d522ad1e3714"
       },
-      "execution_count": 9,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         }
       ]
@@ -319,13 +313,13 @@
       ],
       "metadata": {
         "id": "8gFTwKbFRnM4",
-        "outputId": "23f62225-2de5-49cd-9245-103b575c19f8",
+        "outputId": "c3755ca3-6409-4039-f5e5-ddfcc2751f48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 570
         }
       },
-      "execution_count": 10,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -350,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xnnG9zIW2Qeu",
-        "outputId": "af25fddf-1678-43c3-f1c4-372556575316"
+        "outputId": "11d461f6-08b7-4d24-eebf-28024626fdbb"
       },
-      "execution_count": 11,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,13 +383,13 @@
       ],
       "metadata": {
         "id": "nrmUDFuGRy4K",
-        "outputId": "7ab44ade-cd0b-44cb-e039-06b966d92370",
+        "outputId": "763a39e9-4dc0-4c8d-adee-f0286f813f27",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 559
         }
       },
-      "execution_count": 12,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -423,13 +417,13 @@
       ],
       "metadata": {
         "id": "Bb6ABueLSFa4",
-        "outputId": "96f10895-c670-4893-d7d5-d8bd7900249c",
+        "outputId": "33be4e1d-3174-411a-d93f-882c59bf84d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 559
         }
       },
-      "execution_count": 13,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,13 +440,13 @@
     {
       "cell_type": "code",
       "source": [
-        "token_count_df['Soma'] = df.sum(axis=1)\n",
+        "token_count_df.loc['Total'] = token_count_df.sum(numeric_only=True)\n",
         "token_count_df.to_csv('token_count.csv', index=False)"
       ],
       "metadata": {
         "id": "l7ecCqHl5GwA"
       },
-      "execution_count": 14,
+      "execution_count": 58,
       "outputs": []
     }
   ]
