--- a/network_analysis.ipynb
+++ b/network_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcL8C+tw0CXvtTe6kMQtn1",
+      "authorship_tag": "ABX9TyN4e3gkQX+d9+r3O5p6hSfC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 292
         },
         "id": "rWUa7wAMKDrm",
-        "outputId": "1c6c27ed-231d-4631-fada-1cd007588829"
+        "outputId": "8687954d-f695-4bbe-a5d6-1b6f3d48f280"
       },
       "outputs": [
         {
@@ -47,9 +47,6 @@
             "\n",
             "Installing package into ‘/usr/local/lib/R/site-library’\n",
             "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "also installing the dependencies ‘SnowballC’, ‘janeaustenr’, ‘tokenizers’\n",
-            "\n",
             "\n",
             "\u001b[1mRows: \u001b[22m\u001b[34m8\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m12\u001b[39m\n",
             "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
@@ -108,14 +105,14 @@
       "metadata": {
         "id": "21e9AFU4KrT2"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "stopwords_en <- stopwords(\"en\")\n",
-        "custom_stopwords <- c(stopwords_en, \"asd\", \"e.g\", \"co\", \"1\")\n",
+        "custom_stopwords <- c(stopwords_en, \"asd\", \"e.g\", \"co\", \"1\", \"can\", \"often\", \"may\", \"many\", \"early\", \"well\")\n",
         "\n",
         "top_words_per_network <- responses %>%\n",
         "  unnest_tokens(word, text) %>%\n",
@@ -128,7 +125,7 @@
       "metadata": {
         "id": "GIBnrPu-Ks61"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -139,7 +136,7 @@
       "metadata": {
         "id": "GSv6-so4sR7O"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     }
   ]
